--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
 
 nav {
     height: 70px;
+    color: white;
     background-color: #292929;
     margin-bottom: 50px;
     padding-top: 25px;
